--- a/book.html
+++ b/book.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/book.css">
     </head>
-    <body>
+    <body onload="setbook()">
         <div class="header">
             <img src="assets/logo1.png" class="logo">
             <span>Books Buddy</span>
@@ -23,6 +23,6 @@
 
             </div>
         </div>
-        <script src="scripts/display.js" async defer></script>
+        <script src="scripts/display.js"></script>
     </body>
 </html>
