Completed Major parts

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <img src="assets/logo1.png" class="logo">
             <span>Books Buddy</span>
             <span id="login"><a href="">Login</a></span>
-            <input placeholder="Search your book" id="search">
+            <form id="searching">
+            <input placeholder="Search your book" id="search" name="search">
+            </form>
         </div>
         <div class="front">
             <div>
